syntax = "proto3";

option java_package = "io.xdea.xmux.forum.dto";
option java_outer_classname = "ReplyGrpcApi";

import "google/protobuf/timestamp.proto";
package xdea.xmux.forum;

enum SortingMethod {
  NEWEST = 0;
  VOTE = 1;
  OLDEST = 2;
}

message CreateReplyReq {
  string content = 1;
  int32 refReplyId = 3;
  int32 refPostId = 4;
}

message CreateReplyResp {
  int32 replyId = 1;
}

message GetReplyReq {
  int32 pageNo = 1;
  int32 pageSize = 2;
  int32 refPostId = 3;
  SortingMethod sort = 4;
}

message GetReplyByIdReq {
  int32 replyId = 1;
}

message GetReplyResp {
  repeated Reply replies = 1;
}

message UpdateReplyReq {
  int32 replyId = 1;
}

message Reply {
  int32 id = 1;
  string content = 2;
  int32 vote = 3;
  string uid = 4;
  bool topped = 5;
  google.protobuf.Timestamp createTime = 6;
  int32 refReplyId = 7;
  string refUid = 8;
}